--- a/assets/media.css
+++ b/assets/media.css
@@ -63,7 +63,18 @@
         margin-top: 9em;
     }
     .row {
-        flex-wrap: unset;
+        height: 8rem;
+    }
+    .col-md-1 {
+        flex: 0 0 16.666667%;
+        max-width: 16.666667%;
+    }
+    .col-md-10 {
+        flex: 0 0 66.666667%;
+        max-width: 66.666667%;
+    }
+    .vertical-text-align {
+        line-height: unset !important;
     }
 
 
