--- a/assets/style.css
+++ b/assets/style.css
@@ -139,7 +139,8 @@ nav img {
     text-shadow: -1px 2px 10px darkslategray;
     /* -webkit-text-stroke: 1px black; */
     color: white;
-    background-color: #9a9696;
+    background-color: #35b9ba;
+    /* background-color: rgba(255, 98, 98, 0.603); */
 }
 
 i {
