--- a/assets/style.css
+++ b/assets/style.css
@@ -2,13 +2,13 @@ body {
     font-family: 'Roboto', 'Noto Sans JP', sans-serif;
     font-size: 20px;
     line-height: 150%;
-    background-color: antiquewhite;
+    background-color: rgb(255, 255, 255);
     color: black;
     margin: 0;
     padding: 0;
 }
 h1 {    
-    font-family: 'Oxanium', 'Sawarabi Gothic', sans-serif;
+    font-family: 'Bellota', 'Sawarabi Gothic', sans-serif;
     font-size: 2.1em;
     padding-top: 10px;
     padding-bottom: 10px;
@@ -29,21 +29,15 @@ h1 {
 }
 
 #wrapper {
-    /* border: lightgray;
-    border-radius: .2em;
-    border-style: solid; */
-    /* border-width: 1px; */
-    /* background-color: rgb(255, 255, 255); */
     background-color: transparent;
     margin-bottom: 2rem;
 }
 .row {
     margin: 1rem 0 1rem 0;
+    background-color: transparent;
     padding: 0;
-    border: 1px solid darkcyan;
-    border-radius: 5px;
-    /* border-bottom: 2px solid darkcyan; */
-    background-color: rgb(255, 255, 255);
+    border: 1px solid lightgray;
+    border-radius: .2rem;
 }
 
 /* Footer */
@@ -97,6 +91,7 @@ nav img {
 
 /* Specific to this page */
 #currentDayDiv {
+    color: black;
     font-size: 2rem;
     font-weight: bold;
     padding-top: 1rem;
@@ -113,34 +108,40 @@ nav img {
     padding-top: 1rem;
     padding-bottom: 2rem;
     margin-bottom: 2rem;
+    background: rgb(62,200,255);
+    background: linear-gradient(90deg, rgba(62,200,255,0.46) 0%, rgba(49,255,169,0.5) 100%); 
+    box-shadow: inset 0px 0px 35px 3px rgba(80, 80, 80, 0.507);
+}
+.display-3 {
+    letter-spacing: .5rem;
 }
 
 .editorIcon {
-    background-color: mediumaquamarine;
+    background: rgba(49, 255, 169, 0.5);
     margin: unset !important;
     padding: 1rem 0 1rem 0;
-    border-radius: unset;
+    border-radius: 0 .2rem .2rem 0;
 }
 .hourDisplay {
-    background-color: skyblue;
+    background: rgba(62, 200, 255, 0.459);
     /* border-radius: 5px; */
     margin: 0;
     padding: 0px;
     display: flex;
     align-items: center;
     justify-content: center;
+    border-radius: .2rem 0 0 .2rem;
 }
 .plansDisplay {
+    overflow: hidden;
     margin: 0;
     padding: 0px;
     display: flex;
     align-items: center;
     justify-content: center;
-    text-shadow: -1px 2px 10px darkslategray;
-    /* -webkit-text-stroke: 1px black; */
-    color: white;
-    background-color: #35b9ba;
-    /* background-color: rgba(255, 98, 98, 0.603); */
+    color: black;
+    background: rgb(62,200,255);
+    background: linear-gradient(90deg, rgba(62,200,255,0.46) 0%, rgba(49,255,169,0.5) 100%); 
 }
 
 i {
@@ -180,4 +181,53 @@ i {
 }
 .display-block {
     display: block;
+}
+/*  */
+#plansEditorModal {
+    position: fixed;
+    z-index: 1000;
+    background: rgba(0,0,0,0.8);
+    height: 100%;
+    top:0px;
+    left:0px;
+}
+#modalBody {
+    background: whitesmoke;
+    border-radius: 0.5rem;
+    padding-bottom: 1rem;
+    position: fixed;
+    margin: auto;
+    margin-top: 20rem;
+    left: -50%;
+    right: -50%;
+}
+#modalBody .row {
+    margin: 0;
+    justify-content: space-between;
+    border: unset;
+    height: unset;
+}
+#modalTitle {
+    margin: auto 0 auto 0;
+}
+#editPlansBtn {
+    background: rgba(0, 0, 0, 0.3);
+    border: unset;
+    border-radius: 50%;
+    position: absolute;
+    right: 0.25rem;
+    top: -0.75rem;
+    width: 2.5rem;
+    height: 2.5rem;
+    text-align: center;
+    padding: 0;
+}
+#editPlansBtn i {
+    font-size: 1.5rem;
+    color: white;
+}
+#plansDescriptionStatic {
+    margin: 0.5rem;
+    min-height: 3rem;
+    /* border: solid 1px darkgray; */
 }
